--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ section{
 /*seccion 3*/
 
 .imagen3{
-    background-image: url(imagenes/anuncio.jpg);
+    background-image: url(Imagenes/anuncio.jpg);
     background-size: cover;
     height: 600px;
     width: 5000px;
