--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ html{
 .flexbox{
     display: flex;
     flex-direction: column;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(imagenes/imagenfondo.png);
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(Imagenes/imagenfondo.png);
     background-size: 100%;
 }
 
